--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,8 @@
       "@babel/preset-typescript",
       "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
